fixed select and file path to xml

--- a/ToDoListMVC/appsettings.json
+++ b/ToDoListMVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "ToDoStoragePath": "./ToDoStorage.xml",
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoList;Integrated Security=True;"
   },
   "Logging": {
